# pwm-python-backend-development

./: README.md
aula1/: dockerfile  welcome.py  welcomeOOP.py
aula10/: pyproject.toml
aula10/src/: main.py
aula10/src/clients/: database.py
aula10/src/controllers/: login.py
aula10/src/models/: database.py
aula11/: docker-compose.yml  dockerfile  pyproject.toml
aula11/src/: main.py
aula11/src/clients/: database.py
aula11/src/controllers/: register.py
aula11/src/models/: api.py  database.py
aula12/src/: config.py  main.py
aula13/: dockerfile
aula13/src/: config.py  main.py
aula14/: pyproject.toml
aula14/src/: config.py  main.py
aula14/src/models/: api.py  database.py
aula14/src/routers/: root.py
aula14/src/utils/: security.py  validation.py
aula15/: docker-compose.yml
aula15/src/: main.py
aula2/: Makefile  docker-compose.yml  pyproject.toml
aula2/docker/: dockerfile
aula3/: Makefile  docker-compose.yml  dockerfile  pyproject.toml
aula3/src/: fibonacci.py  fibonacci2.py  fizzbuzz.py
aula4/: docker-compose.yml  dockerfile  pyproject.toml
aula4/src/: logging_exercise.py  shopping.py
aula5/: Dockerfile  docker-compose.yml  pyproject.toml
aula5/src/: models.py  restaurant.py  restaurant_oop.py
aula6/: Dockerfile  docker-compose.yml  pyproject.toml
aula6/src/: run.py
aula7/: Dockerfile  docker-compose.yml  pyproject.toml  readme.md
aula7/src/: run.py
aula8/: docker-compose.yml  dockerfile  pyproject.toml
aula8/src/: run.py
aula9/: docker-compose.yml  pyproject.toml
aula9/src/: main.py
(+31 files in other folders)
